# terminal_to_inbox

./: .env.example  .gitignore  README.md  calendar_content.py  duedate_content.py  email_tool.py  news_content.py  pyproject.toml  summary_content.py  todo_content.py  weather_content.py
terminal_to_inbox.egg-info/: PKG-INFO  requires.txt
