[project]
name = "dsc190-finalproject"
version = "0.1.0"
description = "Terminal to Inbox daily email digest tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "matplotlib>=3.10.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.scripts]
terminal-to-inbox = "email_tool:main"

[dependency-groups]
dev = [
    "black>=26.5.1",
]