[project]
name = "terminal-to-inbox"
version = "0.1.0"
description = "Terminal to Inbox daily email digest tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "matplotlib>=3.7",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
terminal-to-inbox = "email_tool:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = [
    "email_tool",
    "calendar_content",
    "config",
    "duedate_content",
    "news_content",
    "summary_content",
    "todo_content",
    "weather_content",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
]